# pypylon-samples

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  build_and_lint.yml  build_and_test.yml  lint.yml
notebooks/: USB_hardware_trigger_and_chunks.ipynb  USB_hdr_exposure_bracketing_using_sequencer.ipynb  deviceenumeration_and_configuration.ipynb  full_HDR_multiexposure_example.ipynb
notebooks/basic-examples/: Ace2_USB_hdr_exposure_bracketing_using_sequencer.ipynb  USB_hardware_trigger_and_chunks.ipynb  full_HDR_multiexposure_example.ipynb  grabstrategies.ipynb  multicamera_handling.ipynb
notebooks/contrib-examples/: sequencer.ipynb  serial_communication.ipynb
notebooks/utils/: using_sequencer_utils.ipynb  using_serial_communication_utils.ipynb
samples/: USB_linescan_performance_demo_opencv.py
src/pypylon/contrib/sequencer/: __init__.py  sequencer.py
src/pypylon/contrib/serial_communication/: __init__.py  serial_communication.py
src/pypylon_contrib/: __init__.py
src/pypylon_contrib/serial_communication/: serial_communication.py
tests/: __init__.py  test_contrib_namespace.py  test_sequencer.py  test_serial_communication.py
utils/sequencer/: sequencer.py
utils/serial_communication/: __init__.py  serial_communication.py
